--- a/.gitignore
+++ b/.gitignore
@@ -354,3 +354,4 @@ fabric.properties
 # End of https://www.toptal.com/developers/gitignore/api/macos,vscode,python,django,pycharm
 
 my_settings.py
+*.sql
